<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="address_caption">地址</string>
    <string name="alt_check">Alt</string>
    <string name="app_name">androidVNC</string>
    <string name="arrow_down">光标下移</string>
    <string name="arrow_left">光标左移</string>
    <string name="arrow_right">光标右移</string>
    <string name="arrow_up">光标上移</string>
    <string name="auto">Auto</string>
    <string name="button_send_text">发送文本</string>
    <string name="button_send_without_saving">发送文本/不保存</string>
<string name="center_mouse">鼠标 @</string>
<string name="close">关闭</string>
<string name="color_format_caption">颜色格式</string>
<string name="color_mode">颜色模式</string>
<string name="connect_button">连接</string>
<string name="connection_caption">连接</string>
<string name="control_check">Ctrl</string>
<string name="copy_list_button">Copy List</string>
<string name="ctrl_alt_del">Ctrl-Alt-Del</string>
<string name="delete_connection">删除连接</string>
<string name="delete_key">删除已经选择的键</string>
<string name="delete_key_list">删除键列表</string>
<string name="disconnect">断开连接</string>
<string name="export_settings">导出</string>
<string name="export_settings_path">导出文件</string>
<string name="enter_text_title">键入文本并发送</string>
<string name="enter_text">发送文本</string>
<string name="fit_to_screen">适应屏幕</string>
<string name="force_full_check">强制全屏</string>
<string name="import_export_settings">导入/导出设置</string>
<string name="import_settings">导入</string>
<string name="import_settings_file_url">从文件或者URL导入</string>
<string name="info">信息</string>
<string name="intro_text">If you need help, please check the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/Documentation"&gt;manual&lt;/a&gt; (press phone\'s Menu button to access manual and other menu items), or the &lt;a href="http://code.google.com/p/android-vnc-viewer/wiki/faq"&gt;FAQ&lt;/a&gt;.&lt;br&gt;</string>
<string name="intro_title">Welcome</string>
<string name="intro_version_text">&lt;br&gt;--Sent text is remembered across sessions (optionally)&lt;br&gt;--Import/Export settings to file&lt;br&gt;--Button with zoom controls to bring up keyboard&lt;br&gt;--Can force tiling mode (very large screens)</string>
<string name="input_mode">输入模式</string>
<string name="input_mode_fit_to_screen">No Pan; Trackball Mouse</string>
<string name="input_mode_mouse">Mouse Pointer Control Mode</string>
<string name="input_mode_panning">Desktop Panning Mode</string>
<string name="input_mode_touchpad_pan_trackball_mouse">Touch Pan; Trackball Mouse</string>
<string name="input_mode_dpad_pan_touchpad_mouse">Touch Mouse; D-Pad Pan</string>
<string name="input_mode_touch_pan_zoom_mouse">可输入，可缩放屏幕模式（推荐）</string>
<string name="input_mode_touchpad">显示鼠标移动轨迹模式</string><string name="keep_password_button">Keep</string>
<string name="intro_dont_show">Don\'t show again</string>
<string name="keys_caption">Keys</string>
<string name="list_caption">List</string>
<string name="list_name_caption">List Name</string>
<string name="local_mouse_check">Local mouse pointer</string>
<string name="meta_key_title">发送特殊按键</string>
<string name="mouse_follow_pan">Mouse follow pan</string>
<string name="new_list_button">New List</string>
<string name="nickname_caption">Nickname</string>
<string name="off">Off</string>
<string name="on">On</string>
<string name="one_to_one">1:1</string>
<string name="open_doc">Manual/Wiki</string>
<string name="pan_follow_mouse">Pan Follows Mouse</string>
<string name="password_caption">Password</string>
<string name="port_caption">Port</string>
<string name="repeater_button">Repeater</string>
<string name="repeater_caption">Enter the repeater address &lt;b&gt;only if&lt;/b&gt; you are using an&lt;br&gt;&lt;i&gt;UltraVNC&lt;/i&gt;-type repeater</string>
<string name="repeater_clear">Don\'t use repeater</string>
<string name="repeater_dialog_title">Repeater Information</string>
<string name="repeater_empty_text">No repeater</string>
<string name="repeater_save">Use this repeater address</string>
<string name="save_as_copy">Save as Copy</string>
<string name="scaling">Scaling</string>
<string name="scaling_zoomable">可缩放（推荐）</string>
<!-- Send selected metakey -->
<string name="send_button">发送</string>
<string name="send_key_again">Send Key Again</string>
<string name="shift_check">Shift</string>
<string name="shortcut_label">VNC Connection</string>
<string name="showkbd_label">Keyboard</string>
<string name="special_keys">Send Keys</string>
<string name="username_caption">Username</string>
<string name="username_hint">For Windows Authentication</string>


<string name="bianma">编码</string>
<string name="username_hint">For Windows Authentication</string>


</resources>
