<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemSpecialKeys"
        android:alphabeticShortcut="s"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:numericShortcut="1"
        android:title="特殊按键☞"/>
    <item
        android:id="@+id/itemCenterMouse"
        android:alphabeticShortcut="m"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:numericShortcut="2"
        android:visible="false"
        android:title="@string/center_mouse"/>
    <item
        android:id="@+id/itemEnterText"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="发送文本✎"/>
    <item
        android:id="@+id/itemInputMode"
        android:alphabeticShortcut="p"
        android:icon="@android:drawable/ic_input_get"
        android:numericShortcut="5"
        android:title="控制模式¤">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemInputTouchPanZoomMouse"
                    android:title="@string/input_mode_touch_pan_zoom_mouse"/>
                <item
                    android:id="@+id/itemInputTouchpad"
                    android:checked="true"
                    android:title="@string/input_mode_touchpad">
                </item>
                <item
                    android:id="@+id/itemInputFitToScreen"
                    
                    android:title="@string/input_mode_fit_to_screen"/>
                <item
                    android:id="@+id/itemInputPan"
                    android:title="@string/input_mode_panning"/>
                <item
                    android:id="@+id/itemInputMouse"
                    android:title="@string/input_mode_mouse"/>
                <item
                    android:id="@+id/itemInputTouchPanTrackballMouse"
                    android:title="@string/input_mode_touchpad_pan_trackball_mouse"/>
                <item
                    android:id="@+id/itemInputDPadPanTouchMouse"
                    android:title="@string/input_mode_dpad_pan_touchpad_mouse"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/itemDisconnect"
        android:alphabeticShortcut="d"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:numericShortcut="7"
        android:title="断开连接×">
    </item>

    <group android:checkableBehavior="all" 
        android:visible="false">
        <item
            android:id="@+id/itemFollowMouse"
            android:alphabeticShortcut="f"
            android:numericShortcut="6"
            android:title="@string/pan_follow_mouse"/>
        <item
            android:id="@+id/itemFollowPan"
            android:title="@string/mouse_follow_pan"/>
    </group>

    <item
        android:id="@+id/itemColorMode"
        android:alphabeticShortcut="c"
        android:icon="@android:drawable/ic_menu_preferences"
        android:numericShortcut="3"
        android:title="颜色模式♡">
    </item>
    <item
        android:id="@+id/itemScaling"
        android:alphabeticShortcut="z"
        android:icon="@android:drawable/ic_menu_zoom"
        android:numericShortcut="4"
        android:title="屏幕比例□">
        <menu>
            <group
                android:id="@+id/groupScaling"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/itemZoomable"
                    android:title="@string/scaling_zoomable"/>
                <item
                    android:id="@+id/itemOneToOne"
                    android:title="@string/one_to_one"/>
                <item
                    android:id="@+id/itemFitToScreen"
                    android:checked="true"
                    android:title="@string/fit_to_screen"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/itemCtrlAltDel"
        android:alphabeticShortcut="a"
        android:icon="@android:drawable/ic_menu_share"
        android:numericShortcut="8"
        android:title="@string/ctrl_alt_del"/>
    
    <item
        android:id="@+id/itemSendKeyAgain"
        android:alphabeticShortcut="g"
        android:visible="false"
        android:title="@string/send_key_again"/>
    <item
        android:id="@+id/itemArrowLeft"
        android:alphabeticShortcut="h"
        android:title="光标左移→"/>
    <item
        android:id="@+id/itemArrowDown"
        android:alphabeticShortcut="j"
        android:title="光标下移↓"/>
    <item
        android:id="@+id/itemArrowUp"
        android:alphabeticShortcut="k"
        android:title="光标上移↑"/>
    <item
        android:id="@+id/itemArrowRight"
        android:alphabeticShortcut="l"
        android:title="光标右移←">
    </item>
    <item
        android:id="@+id/itemOpenDoc"
        android:icon="@android:drawable/ic_menu_help"
        android:visible="false"
        android:title="@string/open_doc"/>

    <item
        android:id="@+id/itemInfo"
        android:alphabeticShortcut="i"
        android:icon="@android:drawable/ic_menu_info_details"
        android:numericShortcut="9"
        android:title="连接信息＠">
    </item>
</menu>